--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -172,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pacman.ico" />
+    <Content Include="Resources\board 2.bmp" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
