--- a/Pacman/packages.config
+++ b/Pacman/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net452" requireReinstallation="true" />
   <package id="NUnit" version="3.11.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net452" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net452" />
   <package id="WPFMediaKit" version="2.2.0" targetFramework="net452" />
 </packages>
