--- a/Pacman/packages.config
+++ b/Pacman/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.SignalR.Client" version="2.4.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Connections.Common" version="3.1.8" targetFramework="net461" />
