--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -183,11 +183,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Food.cs" />
+    <Compile Include="Classes\FoodCreator.cs" />
     <Compile Include="Classes\FormElements.cs" />
     <Compile Include="Classes\GameBoard.cs" />
     <Compile Include="Classes\Ghost.cs" />
     <Compile Include="Classes\HighScore.cs" />
+    <Compile Include="Classes\MegaFood.cs" />
+    <Compile Include="Classes\MegaFoodCreator.cs" />
     <Compile Include="Classes\Player.cs" />
+    <Compile Include="Classes\RegularFood.cs" />
+    <Compile Include="Classes\RegularFoodCreator.cs" />
+    <Compile Include="Classes\SuperFood.cs" />
+    <Compile Include="Classes\SuperFoodCreator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,7 +275,6 @@
     <None Include="Resources\Ghost 0 1.bmp" />
     <None Include="Resources\eyes.bmp" />
     <None Include="Resources\Board 1.bmp" />
-    <None Include="Resources\Block 2.bmp" />
     <None Include="Resources\Block 1.bmp" />
   </ItemGroup>
   <ItemGroup>
@@ -276,6 +282,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Pacman.ico" />
+    <Content Include="Resources\Block 2.png" />
+    <Content Include="Resources\Block 3.bmp" />
     <Content Include="Resources\board 2.bmp" />
   </ItemGroup>
   <ItemGroup>
