--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -182,6 +182,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\AbstractFactory.cs" />
+    <Compile Include="Classes\RedGhost.cs" />
+    <Compile Include="Classes\RedFactory.cs" />
+    <Compile Include="Classes\BlueFactory.cs" />
+    <Compile Include="Classes\BlueGhost.cs" />
+    <Compile Include="Classes\RedPacman.cs" />
+    <Compile Include="Classes\BluePacman.cs" />
+    <Compile Include="Classes\Character.cs" />
     <Compile Include="Classes\Food.cs" />
     <Compile Include="Classes\FoodCreator.cs" />
     <Compile Include="Classes\FormElements.cs" />
@@ -284,6 +292,42 @@
     <Content Include="Pacman.ico" />
     <Content Include="Resources\Block 2.png" />
     <Content Include="Resources\Block 3.bmp" />
+    <None Include="Resources\RedPacmanLife.png" />
+    <None Include="Resources\RedPacman 4 3.png" />
+    <None Include="Resources\RedPacman 4 2.png" />
+    <None Include="Resources\RedPacman 4 1.png" />
+    <None Include="Resources\RedPacman 4 0.png" />
+    <None Include="Resources\RedPacman 3 3.png" />
+    <None Include="Resources\RedPacman 3 2.png" />
+    <None Include="Resources\RedPacman 3 1.png" />
+    <None Include="Resources\RedPacman 3 0.png" />
+    <None Include="Resources\RedPacman 2 3.png" />
+    <None Include="Resources\RedPacman 2 2.png" />
+    <None Include="Resources\RedPacman 2 1.png" />
+    <None Include="Resources\RedPacman 2 0.png" />
+    <None Include="Resources\RedPacman 1 3.png" />
+    <None Include="Resources\RedPacman 1 2.png" />
+    <None Include="Resources\RedPacman 1 1.png" />
+    <None Include="Resources\RedPacman 1 0.png" />
+    <None Include="Resources\RedPacman 0.png" />
+    <None Include="Resources\BluePacman 0.png" />
+    <None Include="Resources\BluePacman 1 0.png" />
+    <None Include="Resources\BluePacman 1 1.png" />
+    <None Include="Resources\BluePacman 1 2.png" />
+    <None Include="Resources\BluePacman 1 3.png" />
+    <None Include="Resources\BluePacman 2 0.png" />
+    <None Include="Resources\BluePacman 2 1.png" />
+    <None Include="Resources\BluePacman 2 2.png" />
+    <None Include="Resources\BluePacman 2 3.png" />
+    <None Include="Resources\BluePacman 3 0.png" />
+    <None Include="Resources\BluePacman 3 1.png" />
+    <None Include="Resources\BluePacman 3 2.png" />
+    <None Include="Resources\BluePacman 3 3.png" />
+    <None Include="Resources\BluePacman 4 0.png" />
+    <None Include="Resources\BluePacman 4 1.png" />
+    <None Include="Resources\BluePacman 4 2.png" />
+    <None Include="Resources\BluePacman 4 3.png" />
+    <None Include="Resources\BluePacmanLife.png" />
     <Content Include="Resources\board 2.bmp" />
   </ItemGroup>
   <ItemGroup>
