--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -201,7 +201,7 @@
     <Compile Include="Classes\MegaFoodCreator.cs" />
     <Compile Include="Classes\Observer\IObserver.cs" />
     <Compile Include="Classes\Observer\ISubject.cs" />
-    <Compile Include="Classes\Observer\Subject.cs" />
+    <Compile Include="Classes\Observer\PlayerData.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\RegularFood.cs" />
     <Compile Include="Classes\RegularFoodCreator.cs" />
