--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -194,10 +194,14 @@
     <Compile Include="Classes\Adapter\ILog.cs" />
     <Compile Include="Classes\Adapter\PacmanLogAdapter.cs" />
     <Compile Include="Classes\Adapter\PlayerLogAdapter.cs" />
+    <Compile Include="Classes\Bridge\GhostImg.cs" />
+    <Compile Include="Classes\Bridge\Implementor.cs" />
+    <Compile Include="Classes\Bridge\RefinedGhost.cs" />
     <Compile Include="Classes\Decorator\PacmanDecorator.cs" />
     <Compile Include="Classes\Decorator\PinkBorderDecorator.cs" />
     <Compile Include="Classes\Decorator\WhiteBorderDecorator.cs" />
     <Compile Include="Classes\Decorator\YellowBorderDecorator.cs" />
+    <Compile Include="Classes\Facade\GameDetailFacade.cs" />
     <Compile Include="Classes\Food.cs" />
     <Compile Include="Classes\FactoryMethod\FoodCreator.cs" />
     <Compile Include="Classes\FormElements.cs" />
