Added Flyweight design pattern

--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Classes\Decorator\WhiteBorderDecorator.cs" />
     <Compile Include="Classes\Decorator\YellowBorderDecorator.cs" />
     <Compile Include="Classes\Facade\GameDetailFacade.cs" />
+    <Compile Include="Classes\Flyweight\ImageLocation.cs" />
     <Compile Include="Classes\Food.cs" />
     <Compile Include="Classes\FactoryMethod\FoodCreator.cs" />
     <Compile Include="Classes\Template\FormElements.cs" />
