--- a/Pacman/Pacman.csproj
+++ b/Pacman/Pacman.csproj
@@ -228,6 +228,9 @@
     <Compile Include="Classes\FactoryMethod\FoodCreator.cs" />
     <Compile Include="Classes\Interpreter\Context.cs" />
     <Compile Include="Classes\Interpreter\Expression.cs" />
+    <Compile Include="Classes\Interpreter\JoinGameExpression.cs" />
+    <Compile Include="Classes\Interpreter\QuitGameExpression.cs" />
+    <Compile Include="Classes\Interpreter\PauseGameExpression.cs" />
     <Compile Include="Classes\Template\FormElements.cs" />
     <Compile Include="Classes\GameBoard.cs" />
     <Compile Include="Classes\Ghost.cs" />
