Added Unit Test files for flyweight and interpreter design patterns

--- a/Pacman.UnitTests/Pacman.UnitTests.csproj
+++ b/Pacman.UnitTests/Pacman.UnitTests.csproj
@@ -158,16 +158,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\AbstractFactory\BlueFactoryTests.cs" />
-    <Compile Include="Classes\AbstractFactory\BlueGhostTests.cs" />
     <Compile Include="Classes\AbstractFactory\BluePacmanTests.cs" />
     <Compile Include="Classes\AbstractFactory\OrangeFactoryTests.cs" />
-    <Compile Include="Classes\AbstractFactory\OrangeGhostTests.cs" />
     <Compile Include="Classes\AbstractFactory\OrangePacmanTests.cs" />
     <Compile Include="Classes\AbstractFactory\PinkFactoryTests.cs" />
-    <Compile Include="Classes\AbstractFactory\PinkGhostTests.cs" />
     <Compile Include="Classes\AbstractFactory\PinkPacmanTests.cs" />
     <Compile Include="Classes\AbstractFactory\RedFactoryTests.cs" />
-    <Compile Include="Classes\AbstractFactory\RedGhostTests.cs" />
     <Compile Include="Classes\AbstractFactory\RedPacmanTests.cs" />
     <Compile Include="Classes\Adapter\PacmanLogAdapterTests.cs" />
     <Compile Include="Classes\Adapter\PlayerLogAdapterTests.cs" />
@@ -176,7 +172,12 @@
     <Compile Include="Classes\FactoryMethod\RegularFoodCreatorTests.cs" />
     <Compile Include="Classes\FactoryMethod\RegularFoodTests.cs" />
     <Compile Include="Classes\FactoryMethod\SuperFoodCreatorTests.cs" />
+    <Compile Include="Classes\Flyweight\ImageLocationFactoryTests.cs" />
     <Compile Include="Classes\Flyweight\ImageLocationTests.cs" />
+    <Compile Include="Classes\Interpreter\ContextTests.cs" />
+    <Compile Include="Classes\Interpreter\JoinGameExpressionTests.cs" />
+    <Compile Include="Classes\Interpreter\PauseGameExpressionTests.cs" />
+    <Compile Include="Classes\Interpreter\QuitGameExpressionTests.cs" />
     <Compile Include="Classes\Iterator\PacmansTests.cs" />
     <Compile Include="Classes\Iterator\PlayersTests.cs" />
     <Compile Include="Classes\Observer\PlayerDataTests.cs" />
