Added Unit Tests for Flyweight and Interpreter Design Patterns

--- a/Pacman.UnitTests/packages.config
+++ b/Pacman.UnitTests/packages.config
@@ -9,12 +9,18 @@
   <package id="Microsoft.AspNetCore.Authorization" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Http.Features" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.AspNetCore.SignalR.Client.Core" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Common" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Core" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeCoverage" version="16.8.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.8" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net461" />
