Added Unit Tests for PlayerData.cs and HighScore.cs

--- a/Pacman.UnitTests/Pacman.UnitTests.csproj
+++ b/Pacman.UnitTests/Pacman.UnitTests.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Classes\FactoryMethod\SuperFoodCreatorTests.cs" />
     <Compile Include="Classes\Flyweight\ImageLocationFactoryTests.cs" />
     <Compile Include="Classes\Flyweight\ImageLocationTests.cs" />
+    <Compile Include="Classes\HighScoreTests.cs" />
     <Compile Include="Classes\Interpreter\JoinGameExpressionTests.cs" />
     <Compile Include="Classes\Interpreter\PauseGameExpressionTests.cs" />
     <Compile Include="Classes\Interpreter\QuitGameExpressionTests.cs" />
