--- a/DataAccessLayer/packages.config
+++ b/DataAccessLayer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="5.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net461" />
   <package id="Microsoft.Data.SqlClient" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.Data.SqlClient.SNI" version="1.1.0" targetFramework="net461" />
