--- a/Pacman.UnitTests/packages.config
+++ b/Pacman.UnitTests/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.AspNetCore.SignalR.Core" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="5.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeCoverage" version="16.8.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net461" />
