--- a/Pacman/packages.config
+++ b/Pacman/packages.config
@@ -11,6 +11,7 @@
   <package id="Microsoft.AspNetCore.SignalR.Common" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="5.0.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.8" targetFramework="net461" />
   <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.8" targetFramework="net461" />
